--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     "date-fns": "^3.3.1",
     "embla-carousel-react": "^8.0.0-rc22",
     "file-saver": "^2.0.5",
+    "firebase": "^10.12.2",
     "lucide-react": "^0.323.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
@@ -60,6 +61,7 @@
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "universal-cookie": "^7.1.4",
     "usehooks-ts": "^3.1.0",
     "uuid": "^9.0.1",
     "vaul": "^0.9.0",
