--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/express": "^4.17.21",
     "prisma": "^5.14.0"
   },
   "peerDependencies": {
@@ -11,6 +12,9 @@
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2"
   }
 }
