--- a/client/package.json
+++ b/client/package.json
@@ -58,6 +58,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
+    "react-player": "^2.16.0",
     "react-resizable-panels": "^2.0.3",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.4.0",
