--- a/client/package.json
+++ b/client/package.json
@@ -69,13 +69,14 @@
     "usehooks-ts": "^3.1.0",
     "uuid": "^9.0.1",
     "vaul": "^0.9.0",
+    "vite-plugin-remove-console": "^2.2.0",
     "zod": "^3.22.4",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.35.6",
-    "@types/file-saver": "^2.0.7",
     "@types/bun": "latest",
+    "@types/file-saver": "^2.0.7",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@types/uuid": "^9.0.8",
@@ -91,6 +92,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.0",
+    "vite-plugin-mkcert": "^1.17.6",
     "vite-plugin-pwa": "^0.20.0"
   }
 }
